[package]
name = "mls-protospec"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evercrypt = { git = "https://github.com/franziskuskiefer/evercrypt-rust", branch = "master" }
hpke = { git = "https://github.com/franziskuskiefer/hpke-rs", branch = "master" }

# XXX: For local dev
[patch.'https://github.com/franziskuskiefer/evercrypt-rust']
evercrypt = { path = "../evercrypt-rust/evercrypt-rs" }
